--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-A work in progress
+StoryMap is a graphical way of seeing what's going on in the world. Images from articles are displayed on a world map based on the geographic location of their subject.
+
+This was made at Photo Hack Day 2. 
